--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "md5": "^2.2.1",
     "mongoose": "^5.9.10",
     "morgan": "~1.9.0",
+    "nodemailer": "^6.4.6",
     "winston": "^3.2.1"
   }
 }
